--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿#############
+#############
 ## Idea
 #############
 target/
@@ -17,7 +17,7 @@ target/
 /2.JavaCore/
 /3.JavaMultithreading/
 /4.JavaCollections/
-/5.OnlineInternship/
+/5.OnlineInternshio/
 /out/
 /JavaRushPlugin.properties
 /Инструкция.png
