--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#############
+﻿#############
 ## Idea
 #############
 target/
@@ -8,16 +8,16 @@ target/
 *.iml
 *.iws
 *.jrtc
-#*.java
-#*.class
+*.java
+*.class
 *.info
 *.properties
 
-#/1.JavaSyntax/
-#/2.JavaCore/
-#/3.JavaMultithreading/
-#/4.JavaCollections/
-#/5.OnlineInternshio/
+/1.JavaSyntax/
+/2.JavaCore/
+/3.JavaMultithreading/
+/4.JavaCollections/
+/5.OnlineInternship/
 /out/
 /JavaRushPlugin.properties
 /Инструкция.png
